--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,27 @@ body {
   font-weight: 400;
   color: #A0AABB;
 }
+
+.card-container {
+  background-color: white;
+  height: 10vw;
+  width: 10vw;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px rgba(75, 75, 75, 0.05);
+}
+
+.card-container img {
+  max-width: 50%;
+  max-height: 50%;
+}
+
+.game-slot {
+  height: 10vw;
+  width: 10vw;
+  border-radius: 10px;
+}
+
+.game-slot.dashed {
+  border: 1px dashed #6AE7B2;
+}
+
